--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "terser-webpack-plugin": "5.2.5",
     "util": "0.12.4",
     "webpack": "5.63.0",
-    "webpack-cli": "4.9.1",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "^4.4.0"
   },
   "browserslist": [
@@ -40,6 +40,7 @@
   ],
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "ts-loader": "^9.4.1"
   }
 }
