--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1"
   }
 }
