--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   ],
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "css-loader": "^6.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1"
   }
