--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "last 2 edge version"
   ],
   "dependencies": {
+    "@dfinity/auth-client": "^0.14.1",
     "bootstrap": "^5.2.3",
     "css-loader": "^6.7.2",
     "react": "^18.2.0",
